@@ -78,7 +78,11 @@ bool wxRearrangeList::Create(wxWindow *parent,
     for ( n = 0; n < count; n++ )
     {
         if ( order[n] >= 0 )
-            Check(n);
+        {
+            // Be careful to call the base class version here and not our own
+            // which would also update m_order itself.
+            wxCheckListBox::Check(n);
+        }
     }
 
     m_order = order;
@@ -137,8 +141,8 @@ void wxRearrangeList::Swap(int pos1, int pos2)
 
     // then the checked state
     const bool checkedTmp = IsChecked(pos1);
-    Check(pos1, IsChecked(pos2));
-    Check(pos2, checkedTmp);
+    wxCheckListBox::Check(pos1, IsChecked(pos2));
+    wxCheckListBox::Check(pos2, checkedTmp);
 
     // and finally the client data, if necessary
     switch ( GetClientDataType() )
@@ -165,15 +169,23 @@ void wxRearrangeList::Swap(int pos1, int pos2)
     }
 }
 
+void wxRearrangeList::Check(unsigned int item, bool check)
+{
+    if ( check == IsChecked(item) )
+        return;
+
+    wxCheckListBox::Check(item, check);
+
+    m_order[item] = ~m_order[item];
+}
+
 void wxRearrangeList::OnCheck(wxCommandEvent& event)
 {
     // update the internal state to match the new item state
     const int n = event.GetInt();
 
-    m_order[n] = ~m_order[n];
-
-    wxASSERT_MSG( (m_order[n] >= 0) == IsChecked(n),
-                  "discrepancy between internal state and GUI" );
+    if ( (m_order[n] >= 0) != IsChecked(n) )
+        m_order[n] = ~m_order[n];
 }
 
 // ============================================================================
